--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,23 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>org.example</groupId>
     <artifactId>Sudoku</artifactId>
     <version>1.0</version>
-
-
+    <scm>
+        <connection>https://github.com/krisztiankover/Sudoku.git</connection>
+        <developerConnection>https://github.com/krisztiankover/Sudoku.git</developerConnection>
+    </scm>
+    <developers>
+        <developer>
+            <name>Krisztián Kövér</name>
+            <email>krisztian.kover.31@gmail.com</email>
+        </developer>
+    </developers>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.outputEncoding>UTF-8</project.build.outputEncoding>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 </project>
