--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
     <artifactId>Sudoku</artifactId>
     <version>1.0</version>
     <scm>
-        <connection>https://github.com/krisztiankover/Sudoku.git</connection>
-        <developerConnection>https://github.com/krisztiankover/Sudoku.git</developerConnection>
+        <connection>scm:https://github.com/krisztiankover/Sudoku.git</connection>
+        <developerConnection>scm:https://github.com/krisztiankover/Sudoku.git</developerConnection>
     </scm>
     <developers>
         <developer>
@@ -198,6 +198,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.2.0</version>
+                <configuration>
+                    <source>8</source>
+                </configuration>
                 <reportSets>
                     <reportSet>
                         <reports>
